--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-  <!-- Basic -->
+  <!-- Basic 
+  FUZZing    
+-->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
@@ -793,5 +795,8 @@
   </script>
   <!-- End Google Map -->
 </body>
-
+  
+<!-- WARNING 
+DO NO USE ANY TYPE OF AUTOMATED SCANNER
+-->
 </html>
